tests/samples/invalid/index_type_mismatch.pn
fn main() -> i32
{
	var data = [10i32, 20i32];
	var x = data[true];
	return: x
}
